# cmake_project

./: README.md  cmake_project
project_files/: .gitignore  .vimrc  CMakeLists.txt  Makefile
project_files/doxygen/: Doxyfile
project_files/src/: main.cpp
